--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-    <section id="welcome">
+    <section id="welcome-section">
         <div id="navbar-container">
             <nav id="navbar">
-                <a href="#welcome">Welcome</a>
+                <a href="#welcome-section">Welcome</a>
                 <a href="#about-me">About me</a>
-                <a href="#my-work">My work</a>
+                <a href="#projects">My work</a>
             </nav>
         </div>
 
@@ -38,22 +38,22 @@
         </div>
     </section>
 
-    <section id="my-work">
+    <section id="projects">
         <div id="mywork-container">
             <h1>My work</h1>
             <div id="mywork">
-                <a target="_blank" id="elmarket" href="https://arontmg64.github.io/Elmarket/"><img
+                <a class="project-tile" target="_blank" id="elmarket" href="https://arontmg64.github.io/Elmarket/"><img
                         src="images/elmarket.png"></a>
-                <a target="_blank" id="glass-page" href="https://arontmg64.github.io/Glass-website/"><img
-                        src="images/glass page.png"></a>
-                <a target="_blank" id="tribute-page" href="https://arontmg64.github.io/fcc-project-tributepage/"><img
-                        src="images/tribute page.png"></a>
-                <a target="_blank" id="technical-documentation-page"
+                <a class="project-tile" target="_blank" id="glass-page"
+                    href="https://arontmg64.github.io/Glass-website/"><img src="images/glass page.png"></a>
+                <a class="project-tile" target="_blank" id="tribute-page"
+                    href="https://arontmg64.github.io/fcc-project-tributepage/"><img src="images/tribute page.png"></a>
+                <a class="project-tile" target="_blank" id="technical-documentation-page"
                     href="https://arontmg64.github.io/Technical-documentation-page-project/"><img
                         src="images/technical documentation page.png"></a>
-                <a target="_blank" id="survey-form" href="https://arontmg64.github.io/fcc-project-surveyform/"><img
-                        src="images/survey form.png"></a>
-                <a target="_blank" id="landing-page"
+                <a class="project-tile" target="_blank" id="survey-form"
+                    href="https://arontmg64.github.io/fcc-project-surveyform/"><img src="images/survey form.png"></a>
+                <a class="project-tile" target="_blank" id="landing-page"
                     href="https://arontmg64.github.io/Product-landing-page-project/"><img
                         src="images/landing page.png"></a>
             </div>
@@ -61,8 +61,11 @@
     </section>
 
     <div id="button">
-        <a target="_blank" href="https://github.com/AronTMG64"><button type="button" id="github">My Github</button></a>
+        <a id="profile-link" target="_blank" href="https://github.com/AronTMG64"><button type="button" id="github">My
+                Github</button></a>
     </div>
+
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 </html>
